# allocators

./: .gitignore  CMakeLists.txt  LICENSE  README.md
modules/: CMakeLists.txt  memory_pool.cppm
tests/: CMakeLists.txt  tests.cpp
